# FamilyFinance

./: .gitignore  Dockerfile  LICENSE  MONITORING.md  README.md  copilot_reviev_settings.txt  docker-compose.yml  ff.bat  main.py  openapi.json  pyproject.toml  readme.md  requirements.txt  start_monitoring.ps1
.github/workflows/: code-quality-familyfinance.yml  code-quality.yml  firecrawl-deep-analysis-familyfinance.yml  firecrawl-deep-analysis.yml  main.yml  pr-analysis-familyfinance.yml  pr-analysis.yml
app/: Dockerfile  config.py  database.py  docker-compose.yaml  logging_config.py  main.py  main_api.py  prometheus_metrics.py  requirements.txt
app/API/: main_api.py
app/api/: families.py  transactions.py  users.py
app/middleware/: logging.py
app/models/: base.py  entities.py  family_models.py  safe_family_models.py
app/repositories/: family_repo.py  transaction_repo.py  user_repo.py
app/schemas/: family.py  family_scheme.py  transaction.py  user.py
app/services/: family_service.py  transaction_service.py  user_service.py
app/templates/: dashboard.html  script.js  styles.css
frontend/: index.html  script.js  styles.css
grafana/: prometheus.yml  promtail-config.yaml
mongo_data/: _mdb_catalog.wt
readmes/: readme.md  readmedev.md
scr/: main.py
scr/API/: main_api.py
scr/auth/: auth.py
scr/models/: family_models.py
scr/templates/: dashboard.html
scr/tests/: test_add_to_group.py
tests/: conftest.py  moc.py  mock_data.json  test_families.py  test_transactions.py  test_users.py
