[project]
name = "familyfinance"
version = "2.0.0"
description = "API для управления семейными финансами"
readme = "README.md"
license = { text = "" }
authors = [ { name="Ya(Anton T", email="A.tichenachev@yandex.ru" } ]

#Там траблы с этими зависимостями, все че надо - оно в requirements.txt
dependencies = [
  "fastapi>=0.100.0,<0.101.0",
  "uvicorn[standard]>=0.22.0,<0.23.0",
  "motor>=3.1.0,<3.2.0",
  "pydantic>=2.5.0,<2.6.0",
  "python-json-logger>=2.0.7,<2.1.0",
  "passlib[bcrypt]>=1.7.4,<1.8.0",
  "python-jose[cryptography]>=4.0.0,<4.1.0",
  "python-dotenv>=0.21.0,<0.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.0,<7.4.0",
  "pytest-asyncio>=0.21.0,<0.22.0",
  "httpx>=0.25.0,<0.26.0",
  "black>=23.9.0,<24.0.0",
  "isort>=5.12.0,<6.0.0",
  "flake8>=6.0.0,<6.1.0",
  "mypy>=1.5.0,<1.6.0",
]

[project.scripts]
uv = "app.scripts:start"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"